Add trim and fix problem with threads